--- a/src/app.scss
+++ b/src/app.scss
@@ -1,10 +1,15 @@
 * {
-  margin: 0;
-  padding: 0;
-
   .container {
     button {
-      padding: 0.25em 1.25em;
+      padding: 0.25em 1.5em;
+    }
+
+    .list {
+      list-style-position: inside;
+      overflow: hidden;
+      white-space: nowrap;
+      width: 500px;
+      text-overflow: ellipsis;
     }
   }
 }
