--- a/src/web/App.scss
+++ b/src/web/App.scss
@@ -1,17 +1,43 @@
-* {
-  .container {
-    font-family: sans-serif;
-    
-    button {
-      padding: 0.25em 1.5em;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.App {
+  text-align: center;
+
+  .App-header {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+
+    code {
+      font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
     }
 
-    .list {
-      list-style-position: inside;
-      overflow: hidden;
-      white-space: nowrap;
-      width: 500px;
-      text-overflow: ellipsis;
+    .App-logo {
+      height: 40vmin;
+      pointer-events: none;
+    }
+
+    .App-link {
+      color: #61dafb;
     }
   }
 }
