--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,12 @@ body {
   height: 100vh;
   overflow: hidden;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+button {
+  width: 6em;
+  margin: 0.5em;
 }
